@@ -98,8 +98,8 @@ public class CloudMLTQParser extends QParser {
 
     mlt.setAnalyzer(req.getSchema().getIndexAnalyzer());
 
-    Map<String, Collection<Object>> filteredDocument = new HashMap();
-    ArrayList<String> fieldNames = new ArrayList();
+    Map<String, Collection<Object>> filteredDocument = new HashMap<>();
+    ArrayList<String> fieldNames = new ArrayList<>();
 
     if (qf != null) {
       for (String fieldName : qf) {
@@ -146,12 +146,14 @@ public class CloudMLTQParser extends QParser {
 
         for (BooleanClause clause : boostedMLTQuery) {
           Query q = clause.getQuery();
-          Float b = boostFields.get(((TermQuery) q).getTerm().field());
-
-          if (b != null) {
-            q = new BoostQuery(q, b);
+          float originalBoost = 1f;
+          if (q instanceof BoostQuery) {
+            BoostQuery bq = (BoostQuery) q;
+            q = bq.getQuery();
+            originalBoost = bq.getBoost();
           }
-
+          Float fieldBoost = boostFields.get(((TermQuery) q).getTerm().field());
+          q = ((fieldBoost != null) ? new BoostQuery(q, fieldBoost * originalBoost) : clause.getQuery());
           newQ.add(q, clause.getOccur());
         }
 
